<resources>
    <string name="app_name" translatable="false">SmartAlert</string>
    <string name="smartalert" translatable="false">SmartAlert</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log-in</string>
    <string name="create_account">Create Account</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="users">Registered Users</string>
    <string name="employees">Social Protection Employees</string>
    <string name="hello">Hello</string>
    <string name="comments_details">Enter your comments...</string>
    <string name="send">Send</string>
    <string name="submission_title">Ηigh-Risk Incident Submission</string>
    <string name="settings">Settings</string>
    <string name="submission">Submission</string>
    <string name="statistics">Statistics</string>
    <string name="logout">Log out</string>
    <string name="requests">Requests</string>
    <string name="confirmed">Confirmed</string>
    <string name="confirmed2">Confirmed Incidents</string>
    <string name="alerts">Alerts</string>
    <string-array name="spinner_items">
        <item>Fire</item>
        <item>Earthquake</item>
        <item>Flood</item>

    </string-array>
    <string-array name="spinner_items2">
        <item>All</item>
        <item>Accepted</item>
        <item>Rejected</item>
        <item>Pending</item>
    </string-array>
    <string name="myalerts">My Alerts</string>
    <string name="details">Details</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="pending">Pending</string>

</resources>