<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".30"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="74dp"
        android:layout_height="62dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40"
        app:srcCompat="@drawable/baseline_crisis_alert_24"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/smartalert"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.19"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        style="@style/custom2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="44dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:background="@drawable/custom1"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/darkred1"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text"
                android:paddingStart="15dp"
                android:textColor="@color/darkred1"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="300dp"
                android:layout_height="44dp"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:background="@drawable/custom1"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/darkred1"
                android:ems="10"
                android:hint="Temporary Name"
                android:inputType="text"
                android:paddingStart="15dp"
                android:textColor="@color/darkred1"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="44dp"
                android:layout_marginBottom="20dp"
                android:autofillHints=""
                android:background="@drawable/custom1"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/darkred1"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:textColor="@color/darkred1"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/button1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/darkred1"
                android:onClick="login"
                android:text="@string/log_in"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toTopOf="@+id/button2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_marginBaseline="20dp"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/darkred1"
                android:onClick="signup"
                android:text="@string/create_account"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button1"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
