<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red"
    tools:context=".AuthActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".30"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="74dp"
        android:layout_height="62dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_crisis_alert_24"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/smartalert"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.19"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        style="@style/custom3"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="30dp"
            android:paddingBottom="30dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="280dp"
                android:layout_height="44dp"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:background="@drawable/custom1"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/darkred1"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text"
                android:paddingStart="15dp"
                android:textColor="@color/darkred1"
                android:textColorHint="@color/gray2"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/firstname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="280dp"
                android:layout_height="44dp"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:background="@drawable/custom1"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/darkred1"
                android:ems="10"
                android:hint="@string/firstname"
                android:inputType="text"
                android:paddingStart="15dp"
                android:textColor="@color/darkred1"
                android:textColorHint="@color/gray2"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/lastname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="280dp"
                android:layout_height="44dp"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:background="@drawable/custom1"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/darkred1"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="text"
                android:paddingStart="15dp"
                android:textColor="@color/darkred1"
                android:textColorHint="@color/gray2"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstname" />

            <!--<EditText
                android:id="@+id/username"
                android:layout_width="280dp"
                android:layout_height="44dp"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:background="@drawable/custom1"
                android:drawableStart="@drawable/baseline_account_circle_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/darkred1"
                android:ems="10"
                android:hint="Temporary Name"
                android:inputType="text"
                android:paddingStart="15dp"
                android:textColor="@color/darkred1"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lastname" />-->

            <EditText
                android:id="@+id/password"
                android:layout_width="280dp"
                android:layout_height="44dp"
                android:layout_marginBottom="20dp"
                android:autofillHints=""
                android:background="@drawable/custom1"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/darkred1"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:textColor="@color/darkred1"
                android:textColorHint="@color/gray2"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/button1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastname" />

            <android.widget.Button
                android:id="@+id/button1"
                android:layout_width="280dp"
                android:layout_height="44dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/color_button"
                android:onClick="login"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toTopOf="@+id/button2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_marginBaseline="20dp" />

            <android.widget.Button
                android:id="@+id/button2"
                android:layout_width="280dp"
                android:layout_height="44dp"
                android:background="@drawable/color_button"
                android:onClick="createAccount"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button1" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/switch_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text=""
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        app:layout_constraintVertical_bias="0.25" />


</androidx.constraintlayout.widget.ConstraintLayout>
